@@ -9,6 +9,9 @@ __   __/ _ \|___  |___ \
  \ V /| |_| | / /  / __/
   \_/  \___(_)_/  |_____|         (unreleased)
 
+TransTractor:
+ * Remove one source of supirious error reports when writing files (GitHub's #494)
+
 po4a main script:
  * Fix the behavior of --translate-only (GitHub's #482) [Mt & Golubev Alexander].
 
